# Tiny_Monitor

./: LICENSE  README.md  Standrad.md  build.sh
code/: CMakeLists.txt  main.cpp
code/core/: api.h
test/: test.cpp
tool/: tool_right.sh  tool_right_test  tool_tar.sh
toolchain/: readme
ui/: ui.py
ui/pyui/: README.md
